--- a/HAMBURGER ICON/style.css
+++ b/HAMBURGER ICON/style.css
@@ -1,5 +1,6 @@
 body{
     display: flex;
+    background-color: aqua;
     align-items: center;
     justify-content: center;
     font-family: "poppins",sans-serif;
