--- a/TOAST NOTIFICATION/style.css
+++ b/TOAST NOTIFICATION/style.css
@@ -1,5 +1,6 @@
 body{
     display: flex;
+    background-color: rosybrown ;
     align-items: center;
     justify-content: center;
     font-family: "poppins",sans-serif;
